# protocols.distributed_keygen

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg
scripts/: bench_batch_size.py
src/tno/mpc/protocols/distributed_keygen/: __init__.py  distributed_keygen.py  paillier_shared_key.py  utils.py
src/tno/mpc/protocols/distributed_keygen/test/: __init__.py  conftest.py  test_distributed_keygen.py  test_serialization.py
stubs/sympy/: __init__.pyi
stubs/sympy/ntheory/: __init__.pyi  generate.pyi  residue_ntheory.pyi
tno/mpc/protocols/distributed_keygen/: __init__.py  distributed_keygen.py  paillier_shared_key.py  shamir_secret_sharing.py  shamir_secret_sharing_integers.py  utils.py
tno/mpc/protocols/distributed_keygen/test/: test_distributed_keygen.py  test_shamir_secret_sharing.py  test_shamir_secret_sharing_integers.py
