[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tno.mpc.protocols.distributed_keygen"
description = "Distributed key generation using Paillier homomorphic encryption"
readme = "README.md"
authors = [{ name = "TNO PET Lab", email = "petlab@tno.nl" }]
maintainers = [{ name = "TNO PET Lab", email = "petlab@tno.nl" }]
keywords = [
    "TNO",
    "MPC",
    "multi-party computation",
    "encryption schemes",
    "distributed",
    "paillier",
    "cryptosystem",
    "protocols",
]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Topic :: Security :: Cryptography",
]
urls = { Homepage = "https://pet.tno.nl/", Documentation = "https://docs.pet.tno.nl/mpc/protocols/distributed_keygen/4.3.0", Source = "https://github.com/TNO-MPC/protocols.distributed_keygen" }
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "sympy",
    "tno.mpc.communication~=4.8",
    "tno.mpc.encryption_schemes.paillier~=3.0,>=3.0.1",
    "tno.mpc.encryption_schemes.shamir>=1.3.0,<2.0",
    "tno.mpc.encryption_schemes.utils~=0.10",
    "typing_extensions; python_version<'3.12'",
]

[project.optional-dependencies]
gmpy = [
    "tno.mpc.encryption_schemes.paillier[gmpy]",
    "tno.mpc.encryption_schemes.shamir[gmpy]",
    "tno.mpc.encryption_schemes.utils[gmpy]",
]
tests = [
    "pytest",
    "pytest-asyncio>=0.17",
]
bench = [
    "numpy",
    "matplotlib",
    "pandas",
    "seaborn",
    "tqdm",
    "tikzplotlib"
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = {attr = "tno.mpc.protocols.distributed_keygen.__version__"}

[tool.setuptools.package-data]
"*" = ["py.typed"]
"tno.mpc.protocols.distributed_keygen" = ["test/test_data/*.obj"]

[tool.coverage.run]
branch = true
omit = ["*/test/*"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.isort]
profile = "black"
known_tno = "tno"
known_first_party = "tno.mpc.protocols.distributed_keygen"
sections = "FUTURE,STDLIB,THIRDPARTY,TNO,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "LOCALFOLDER"

[tool.pytest.ini_options]
addopts = "--fixture-pool-scope package"

[tool.mypy]
mypy_path = "src,stubs"
strict = true
show_error_context = true
namespace_packages = true
explicit_package_bases = true

[tool.tbump.version]
current = "4.3.0"
regex = '''
\d+\.\d+\.\d+(-(.*))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

    [[tool.tbump.file]]
    src = "pyproject.toml"
    search = "current = \"{current_version}\""

    [[tool.tbump.file]]
    src = "src/tno/mpc/protocols/distributed_keygen/__init__.py"
    search = "__version__ = \"{current_version}\""

    [[tool.tbump.file]]
    src = "CITATION.cff"
    search = "version: {current_version}"

    [[tool.tbump.file]]
    src = "README.md"
    search = '\[here\]\(https:\/\/docs.pet.tno.nl/[^\.]*\/{current_version}'
