[metadata]
name = tno.mpc.protocols.distributed_keygen
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Distributed key generation using Paillier homomorphic encryption
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    encryption schemes
    distributed
    paillier
    cryptosystem
    protocols
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.protocols.distributed_keygen/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/protocols/distributed_keygen/3.1.2
    Source Code = https://github.com/TNO-MPC/protocols.distributed_keygen
version = attr: tno.mpc.protocols.distributed_keygen.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.protocols.distributed_keygen
    tno.mpc.protocols.distributed_keygen.test
zip_safe = False
install_requires =
    sympy
    tno.mpc.communication~=4.0
    tno.mpc.encryption_schemes.paillier~=2.1,>=2.1.1
    tno.mpc.encryption_schemes.shamir~=0.1
    tno.mpc.encryption_schemes.utils~=0.10
    typing_extensions
namespace_packages =
    tno
    tno.mpc
    tno.mpc.protocols
include_package_data = True

[options.package_data]
tno.mpc.protocols.distributed_keygen = py.typed

[options.extras_require]
gmpy =
    tno.mpc.encryption_schemes.paillier[gmpy]
    tno.mpc.encryption_schemes.shamir[gmpy]
    tno.mpc.encryption_schemes.utils[gmpy]
tests =
    pytest
    pytest-asyncio>=0.17
